# mkb

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  qa-auditor.md  release-engineer.md  tdd-driver.md
.claude/commands/: audit.md  implement.md  release.md
.claude/skills/mkql-grammar/: SKILL.md
.claude/skills/rust-python-bridge/: SKILL.md
.claude/skills/temporal-enforcement/: SKILL.md
.claude/skills/testing-patterns/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/mkb-cli/: Cargo.toml
crates/mkb-cli/src/: bench.rs  main.rs
crates/mkb-cli/tests/: e2e.rs
crates/mkb-core/: Cargo.toml
crates/mkb-core/src/: document.rs  error.rs  frontmatter.rs  lib.rs  link.rs  schema.rs  temporal.rs  view.rs
crates/mkb-index/: Cargo.toml
crates/mkb-index/src/: lib.rs
crates/mkb-mcp/: Cargo.toml
crates/mkb-mcp/src/: lib.rs  tools.rs
crates/mkb-parser/: Cargo.toml
crates/mkb-parser/src/: ast.rs  lib.rs  mkql.pest
crates/mkb-python/: Cargo.toml
crates/mkb-python/src/: lib.rs
crates/mkb-query/: Cargo.toml
crates/mkb-query/src/: compiler.rs  context.rs  executor.rs  formatter.rs  graph.rs  lib.rs
crates/mkb-vault/: Cargo.toml
crates/mkb-vault/src/: lib.rs  watcher.rs
docs/: implementation-plan.md  mkql-reference.md  phase-spec-v2.md  playbook-em-operational-awareness.md  playbook-vp-operational-awareness.md  tech-spec.md
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md  ADR-009.md  ADR-010.md  ADR-011.md  ADR-012.md
fixtures/: sample_person.md  sample_project.md  sample_signal.md
python/mkb/: __init__.py
python/mkb_ai/: __init__.py
python/mkb_ai/confidence/: __init__.py  scorer.py
python/mkb_ai/embeddings/: __init__.py  generator.py
python/mkb_ai/extraction/: __init__.py  dates.py  entities.py
python/mkb_ai/ingestion/: __init__.py  csv_adapter.py  pipeline.py
python/mkb_ai/llm/: __init__.py
python/mkb_ai/temporal/: __init__.py
schemas/: _base.yaml  concept.yaml  decision.yaml  meeting.yaml  person.yaml  project.yaml  signal.yaml
tests/e2e/: test_placeholder.py
tests/python/: test_bridge.py  test_csv_adapter.py  test_embeddings.py  test_extraction.py  test_ingestion.py  test_placeholder.py
