[workspace]
resolver = "2"
members = [
    "crates/mkb-core",
    "crates/mkb-parser",
    "crates/mkb-index",
    "crates/mkb-vault",
    "crates/mkb-query",
    "crates/mkb-mcp",
    "crates/mkb-cli",
    "crates/mkb-python",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
repository = "https://github.com/viktorbezdek/mkb"
description = "Markdown Knowledge Base for LLMs"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Database
rusqlite = { version = "0.38", features = ["bundled-full"] }
sqlite-vec = "0.1.6"
zerocopy = { version = "0.7", features = ["derive"] }

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Async
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Parsing
pest = "2.7"
pest_derive = "2.7"

# Time
chrono = { version = "0.4", features = ["serde"] }

# MCP
rmcp = { version = "0.15", features = ["server", "transport-io"] }
schemars = "1"
urlencoding = "2"

# File watching
notify = "7"

# Hashing
sha2 = "0.10"

# Testing
proptest = "1"
tempfile = "3"

# Python bridge
pyo3 = { version = "0.28", features = ["abi3-py311"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Internal crates
mkb-core = { path = "crates/mkb-core" }
mkb-parser = { path = "crates/mkb-parser" }
mkb-index = { path = "crates/mkb-index" }
mkb-vault = { path = "crates/mkb-vault" }
mkb-query = { path = "crates/mkb-query" }
mkb-mcp = { path = "crates/mkb-mcp" }
