[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mkb"
version = "0.1.0"
description = "Markdown Knowledge Base for LLMs"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "numpy>=1.26",
    "tiktoken>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "mypy>=1.12",
    "ruff>=0.8",
    "pip-audit>=2.7",
]

[tool.maturin]
manifest-path = "crates/mkb-python/Cargo.toml"
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "mkb._mkb_core"

[tool.ruff]
target-version = "py311"
line-length = 99
[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests/python", "tests/e2e"]
asyncio_mode = "auto"
