[package]
name = "mkb-cli"
description = "CLI binary for MKB"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "mkb"
path = "src/main.rs"

[[bin]]
name = "mkb-bench"
path = "src/bench.rs"

[dependencies]
mkb-core = { workspace = true }
mkb-parser = { workspace = true }
mkb-index = { workspace = true }
mkb-vault = { workspace = true }
mkb-query = { workspace = true }
mkb-mcp = { workspace = true }
rmcp = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
