[package]
name = "mkb-mcp"
description = "MCP (Model Context Protocol) server for MKB vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mkb-core = { workspace = true }
mkb-parser = { workspace = true }
mkb-index = { workspace = true }
mkb-vault = { workspace = true }
mkb-query = { workspace = true }
chrono = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
